<resources>
    <string name="log_cache_with_sms">Log cache with SMS</string>
    <string name="log_cache_to_file">Log cache to file</string>
    <string name="field_note_file_caveat">Caches logged to sdcard. Upload with your desktop to Treasure Hunter/my/uploadfieldnotes.aspx</string>
    <string name="sms_caveat">To set up SMS logging, see http://electromedica.in/log.aspx</string>
    <string name="error_writing_cache_log">Error writing cache log to sdcard.</string>
    <string name="log_cache">Log Cache</string>
    <string name="too_many_caches">Too many caches to display--zoom in to see caches.</string>
    <string name="density_view_switch">Switching to density view.</string>
    <string name="satellite_view">Satellite view</string>
    <string name="map_view">Map view</string>
    <string name="error1">Error: %1$s</string>
    <string name="error2">Error: %1$s\n%2$s</string>
    <string name="unknown_error">Unknown error</string>
    <string name="error_activity_not_found">Didn\'t find the Activity</string>
    <string name="radar">Radar</string>
    <string name="degrees_symbol">°</string>
    <string name="my_location">My Location</string>
    <string name="field_note_title">Log cache using Field Note</string>
    <string name="send_sms">Send SMS</string>
    <string name="log_fieldnote_to_file">Log field note</string>
    <string name="cancel">Cancel</string>
    <string name="cache_page">Web Page</string>
    <string name="recent_locations">Recent locations</string>
    <string name="current_location_null">Current Location is not available. Make sure
		your GPS is enabled and try again.</string>
    <string name="out_of_service">OUT OF SERVICE</string>
    <string name="available">AVAILABLE</string>
    <string name="temporarily_unavailable">TEMPORARILY UNAVAILABLE</string>
    <string name="getting_location_from_gps">getting location from gps...</string>
    <string name="map_intent">google.navigation:q=%1$.5f,%2$.5f</string>
    <string name="get_coords_toast">"To get the coords from the cache page, click: 'online maps...' / 'Google Maps'."</string>
    <string name="error_opening_file">Unable to open file \'%1$s\'.</string>
    <string name="error_parsing_file">Error parsing file \'%1$s\'.</string>
    <string name="file_not_found">File not found exception: \'%1$s\'.</string>
    <string name="error_reading_file">Error reading file \'%1$s\'.</string>
    <string name="error_writing_cache">Error writing cache: \'%1$s\'.</string>
    <string name="error_no_gpx_files">Nothing to sync: no cache files found in %1$s folder.\n\nYou can bulk import hundreds of caches at a time by copying gpx or loc files onto your sd card. See http://code.google.com/p/geobeagle for instructions.</string>
    <string name="error_cant_read_sd">Error reading folder %1$s, please make sure your sdcard is readable.</string>
    <string name="my_current_location">My Current Location</string>
    <string name="import_canceled">Sync aborted!</string>
    <string name="menu_show_nearest_caches">Show Nearest Caches</string>
    <string name="menu_show_all_caches">Show All Caches</string>
    <string name="no_nearby_caches">No caches near your current location; click Menu / Show all caches.</string>
    <string name="no_caches">No Caches--click Menu / Update Gpx to find a cache on the internet, or go to the Data tab and click Menu / Sync to import "Pocket Queries" downloaded from Electromedica.in or Other GeoCatching Websites Appdev: @nkit .</string>
    <string name="cache_list_calculating">Calculating the list of caches...</string>
    <string name="menu_choose_filter">Choose filter</string>
    <string name="menu_cache_list">Cache List</string>
    <string name="menu_search_online">Search Online</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_edit_geocache">Edit</string>
    <string name="menu_project_waypoint">Project Waypoint</string>
    <string name="menu_google_maps">Navigate</string>
    <string name="menu_log_dnf">Log DNF</string>
    <string name="menu_log_find">Log Find</string>
    <string name="menu_toggle_satellite">Satellite view</string>
    <string name="menu_add_my_location">Add My Location</string>
    <string name="menu_map">Show Map</string>
    <string name="menu_cache_map">Show on Map</string>
    <string name="menu_center_location">My location</string>
    <string name="menu_proximity">Proximity View</string>
    <string name="menu_delete_cache">Delete</string>
    <string name="menu_view_geocache">View</string>
    <string name="menu_filterlist">Filters...</string>
    <string name="menu_edit_filter">Edit Filter</string>
    <string name="menu_get_nearby_bcaching">Get nearby from Treasure Hunter</string>
    <string name="menu_get_area_bcaching">Get this area from Treasure Hunter</string>
    <string name="menu_update_from_bcaching">Update all from Electromedica.in</string>
    <string name="menu_copy_details">Copy Details</string>
    <string name="menu_add_note">Add note</string>
    <string name="menu_add_waypoint">Add waypoint</string>
    <string name="map_menu_toggle_distanceview_on">Show distance line</string>
    <string name="map_menu_toggle_distanceview_off">Hide distance line</string>
    <string name="toast_clipboard_copy">Cache details copied to clipboard. Paste into a notepad to edit.</string>
    <string name="confirm_delete_title">Confirm delete %1$s</string>
    <string name="confirm_delete_body_text">Delete %1$s: "%2$s"?</string>
    <string name="assign_tags">Assign tags</string>
    <string name="delete_all_caches">Delete all caches</string>
    <string name="confirm_delete_all_caches">Do you want to delete all caches in the database?</string>
    <string name="bcaching_login_failed">Electromedica.in login failed</string>
    <string name="bcaching_sendrequest_failed">SendRequest failed</string>
    <string name="bcaching_no_nearby_caches">No nearby caches found</string>
    <string name="bcaching_processing_result_failed">Processing request result failed</string>
    <string name="bcaching_detail_request_failed">Detail Request failed</string>
    <string name="bcaching_json_error">Request returned erroneous data</string>
    <string name="toaster_sdcard_error">SD Card isn\'t readable. Unmount before starting Treasure Hunter.</string>
    <string name="show_hint">Show hint</string>
    <string name="hide_hint">Hide hint</string>
    <string name="bcaching_set_user_pwd">Set Electromedica username and password in Settings</string>
    <string name="bcaching_synching">Syncing from Electromedica.in</string>
    <string name="bcaching_updating">Updating from Electromedica.in</string>
    <string name="please_wait">Please wait...</string>
    <string name="my_location_name_format">[%1$tk:%1$tM] My Location</string>
    <string name="sync_dir_format">Sync %1$s</string>
    <string name="cache_action_rmaps">Show in RMaps</string>
    <string name="menu_delete_file">Delete file from sdcard</string>
    <string name="menu_confirm_delete_file">Confirm deletion of %1$s</string>
    <string name="menu_remove_source">Remove from database</string>
    <string name="menu_about">About Treasure Hunter</string>
    <string name="sources_list_calculating">"Calculating..."</string>
    <string name="sources_list_empty">"No data! Import GPX or sync with Treasure Hunter."</string>
    <string name="bcaching_no_account">Account not set up</string>
    <string name="bcaching_caches_to_update1">Caches to update: %1$s</string>
    <string name="data_file_missing">File is missing</string>
    <string name="data_new_file">NEW FILE</string>
    <string name="data_file_in_sync1">In sync, file date %1$s</string>
    <string name="data_file_not_synced1">NOT SYNCED, file date %1$s</string>
    <string name="data_error_parsing_file">Error parsing file XML</string>
    <string name="dont_create">Don\'t create</string>
    <string name="waypoint_delete_confirm">Are you sure you want to delete this waypoint?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="waypoints">Waypoints</string>
    <string name="project_start_coordinates">Start Coordinates</string>
    <string name="project_distance_and_bearing">Distance and Bearing</string>
    <string name="project_degrees">degrees</string>
    <string name="project_distance_unit_prompt">Select a distance unit</string>
    <string name="project_projected_coordinates">Projected Coordinates</string>
    <string name="project_create_new_waypoint">Create New Waypoint</string>
    <string name="project_cancel">Cancel</string>
    <string name="projection_name_format">[%1$tk:%1$tM] %2$s Projection</string>
    <string name="projection_invalid_start_coords">### Invalid start coordinates ###</string>
    <string name="projection_invalid_input">### Invalid input ###</string>
    <string name="search_initial_query">Search a cache</string>
    <string name="search_label">Cache search</string>
    <string name="search_hint"/>
    <string name="search_invoke">Go</string>
    <string name="menu_create_new_database">Create New Database</string>
    <string name="invalid_filename">Filename contains invalid character(s)</string>
    <string name="error_creating_file">Error creating file</string>
    <string name="turn_off_gps">Turn off GPS</string>
    <string name="turn_on_gps">Turn on GPS</string>
    <string name="set_cache_as_centerpoint">Set as centerpoint</string>
    <string name="clear_centerpoint">Clear centerpoint</string>
    <string name="update">Update GpX</string>
    <string name="hello">Choose one of the features below.</string>
    <string name="app_name">Treasure Hunt</string>
    <string name="description_logo">Demo</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>
    <string name="skip">Skip</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Me On Map</string>
    <string name="title_feature2">Walking meter</string>
    <string name="title_feature3">Block Call </string>
    <string name="title_feature4">Call Log</string>
    <string name="title_feature5">Block SMS</string>
    <string name="title_feature6">SMS Log</string>
    <string name="title_feature7">SMS Number </string>
    <string name="title_feature8">Inbox</string>
    <string name="title_setting">Setting</string>
    <string name="title_PrivateSMSNumber">Private SMS Number</string>
    <string name="title_speed">Speedo meter</string>
    <string name="title_smsblock">SMS Block Number</string>
    <string name="title_addblocknumber">Add Number</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="BlockCall">Block Call</string>
    <string name="Blocksms">Block SMS</string>
    <string name="btnsave">Save</string>
    <string name="btnCleare">Cancel</string>
    <string name="mode">Mode</string>
    <string name="message">Message</string>
    <string name="autoreply">Auto Reply by SMS</string>
    <string name="savecalllog">Save block call log list</string>
    <string name="savesmslog">Save block sms log list</string>
    <string name="savesmsInthis">Private SMS Inbox</string>
    <string name="speed">Speed</string>
    <string name="wel_message">Click your team color below to join the game</string>
</resources>