<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    
    >
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" 
            android:visibility="gone"/>

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" android:text="Open Games " />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about" android:visibility="gone"
             />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_search" android:visibility="gone"
             />
    </LinearLayout>
    
<TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/wel_message"
    />


    <LinearLayout style="@style/TitleBar" android:layout_marginTop="10dip">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/red"
            android:id="@+id/btnred"
             />

        <ImageView style="@style/TitleBarSeparator" />
      
           <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/yellow"
            android:id="@+id/btnyellow"
             />

        <ImageView style="@style/TitleBarSeparator" />
        
           <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/black"
            android:id="@+id/btnblack"
             />

        <ImageView style="@style/TitleBarSeparator" />
        
           <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/blue"
            android:id="@+id/btnblue"
             />

        <ImageView style="@style/TitleBarSeparator" />
        
           <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/greenyellow"
            android:id="@+id/btngreemyello"
             />

        <ImageView style="@style/TitleBarSeparator" />
        
           <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/lightgreen"
            android:id="@+id/btnlightgreen"
             />

        <ImageView style="@style/TitleBarSeparator" />
        
           <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/lightsky"
            android:id="@+id/btnlightsky"
             />

        <ImageView style="@style/TitleBarSeparator" />
        
    </LinearLayout>
    
        <LinearLayout style="@style/TitleBar" android:layout_marginTop="10dip">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/orange"
            android:id="@+id/btnorange"
             />

        <ImageView style="@style/TitleBarSeparator" />
      
           <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/purple"
            android:id="@+id/btnpurple"
             />

        <ImageView style="@style/TitleBarSeparator" />
        
           <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/white"
            android:id="@+id/btnwhite"
             />

        <ImageView style="@style/TitleBarSeparator" />
        
           <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/silver"
            android:id="@+id/btnsilver"
             />

        <ImageView style="@style/TitleBarSeparator" />
        
           <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/pink"
            android:id="@+id/btnpink"
             />

        <ImageView style="@style/TitleBarSeparator" />
        
           <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/pinkbrown"
            android:id="@+id/btnpinkbrown"
             />

        <ImageView style="@style/TitleBarSeparator" />
        
           <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/green"
            android:id="@+id/btngreen"
             />

        <ImageView style="@style/TitleBarSeparator" />
        
    </LinearLayout>
    
          <LinearLayout   android:layout_width="fill_parent"
  android:layout_height="fill_parent"    android:id="@+id/LinLayout">
    
	<ListView 
	       android:layout_column="1"
	       android:isScrollContainer="true"
	    android:id="@+id/listgame"  
		   android:layout_width="fill_parent"
                android:layout_height="fill_parent"
			
			>
		</ListView>
		</LinearLayout>
</LinearLayout>
